_generated-doc/2.7/config/quarkus-swaggerui.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-swaggerui_configuration]]link:#quarkus-swaggerui_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.path]]`link:#quarkus-swaggerui_quarkus.swagger-ui.path[quarkus.swagger-ui.path]`

[.description]
--
The path where Swagger UI is available. 
 The value `/` is not allowed as it blocks the application from serving anything else. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.
--|string 
|`swagger-ui`


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.always-include]]`link:#quarkus-swaggerui_quarkus.swagger-ui.always-include[quarkus.swagger-ui.always-include]`

[.description]
--
If this should be included every time. By default this is only included when the application is running in dev mode.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.urls-primary-name]]`link:#quarkus-swaggerui_quarkus.swagger-ui.urls-primary-name[quarkus.swagger-ui.urls-primary-name]`

[.description]
--
If urls option is used, this will be the name of the default selection.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.title]]`link:#quarkus-swaggerui_quarkus.swagger-ui.title[quarkus.swagger-ui.title]`

[.description]
--
The html title for the page.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.theme]]`link:#quarkus-swaggerui_quarkus.swagger-ui.theme[quarkus.swagger-ui.theme]`

[.description]
--
Swagger UI theme to be used.
--|`original`, `feeling-blue`, `flattop`, `material`, `monokai`, `muted`, `newspaper`, `outline` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.footer]]`link:#quarkus-swaggerui_quarkus.swagger-ui.footer[quarkus.swagger-ui.footer]`

[.description]
--
A footer for the html page. Nothing by default.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.deep-linking]]`link:#quarkus-swaggerui_quarkus.swagger-ui.deep-linking[quarkus.swagger-ui.deep-linking]`

[.description]
--
If set to true, enables deep linking for tags and operations.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.display-operation-id]]`link:#quarkus-swaggerui_quarkus.swagger-ui.display-operation-id[quarkus.swagger-ui.display-operation-id]`

[.description]
--
Controls the display of operationId in operations list. The default is false.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.default-models-expand-depth]]`link:#quarkus-swaggerui_quarkus.swagger-ui.default-models-expand-depth[quarkus.swagger-ui.default-models-expand-depth]`

[.description]
--
The default expansion depth for models (set to -1 completely hide the models).
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.default-model-expand-depth]]`link:#quarkus-swaggerui_quarkus.swagger-ui.default-model-expand-depth[quarkus.swagger-ui.default-model-expand-depth]`

[.description]
--
The default expansion depth for the model on the model-example section.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.default-model-rendering]]`link:#quarkus-swaggerui_quarkus.swagger-ui.default-model-rendering[quarkus.swagger-ui.default-model-rendering]`

[.description]
--
Controls how the model is shown when the API is first rendered.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.display-request-duration]]`link:#quarkus-swaggerui_quarkus.swagger-ui.display-request-duration[quarkus.swagger-ui.display-request-duration]`

[.description]
--
Controls the display of the request duration (in milliseconds) for "Try it out" requests.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.doc-expansion]]`link:#quarkus-swaggerui_quarkus.swagger-ui.doc-expansion[quarkus.swagger-ui.doc-expansion]`

[.description]
--
Controls the default expansion setting for the operations and tags.
--|`list`, `full`, `none` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.filter]]`link:#quarkus-swaggerui_quarkus.swagger-ui.filter[quarkus.swagger-ui.filter]`

[.description]
--
If set, enables filtering. The top bar will show an edit box that you can use to filter the tagged operations that are shown. Can be Boolean to enable or disable, or a string, in which case filtering will be enabled using that string as the filter expression. Filtering is case sensitive matching the filter expression anywhere inside the tag.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.max-displayed-tags]]`link:#quarkus-swaggerui_quarkus.swagger-ui.max-displayed-tags[quarkus.swagger-ui.max-displayed-tags]`

[.description]
--
If set, limits the number of tagged operations displayed to at most this many. The default is to show all operations.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.operations-sorter]]`link:#quarkus-swaggerui_quarkus.swagger-ui.operations-sorter[quarkus.swagger-ui.operations-sorter]`

[.description]
--
Apply a sort to the operation list of each API. It can be 'alpha' (sort by paths alphanumerically), 'method' (sort by HTTP method) or a function (see Array.prototype.sort() to know how sort function works). Default is the order returned by the server unchanged.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.show-extensions]]`link:#quarkus-swaggerui_quarkus.swagger-ui.show-extensions[quarkus.swagger-ui.show-extensions]`

[.description]
--
Controls the display of vendor extension (x-) fields and values for Operations, Parameters, and Schema.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.show-common-extensions]]`link:#quarkus-swaggerui_quarkus.swagger-ui.show-common-extensions[quarkus.swagger-ui.show-common-extensions]`

[.description]
--
Controls the display of extensions (pattern, maxLength, minLength, maximum, minimum) fields and values for Parameters.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.tags-sorter]]`link:#quarkus-swaggerui_quarkus.swagger-ui.tags-sorter[quarkus.swagger-ui.tags-sorter]`

[.description]
--
Apply a sort to the tag list of each API. It can be 'alpha' (sort by paths alphanumerically) or a function (see Array.prototype.sort() to learn how to write a sort function). Two tag name strings are passed to the sorter for each pass. Default is the order determined by Swagger UI.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.on-complete]]`link:#quarkus-swaggerui_quarkus.swagger-ui.on-complete[quarkus.swagger-ui.on-complete]`

[.description]
--
Provides a mechanism to be notified when Swagger UI has finished rendering a newly provided definition.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.syntax-highlight]]`link:#quarkus-swaggerui_quarkus.swagger-ui.syntax-highlight[quarkus.swagger-ui.syntax-highlight]`

[.description]
--
Set to false to deactivate syntax highlighting of payloads and cURL command, can be otherwise an object with the activate and theme properties.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.oauth2-redirect-url]]`link:#quarkus-swaggerui_quarkus.swagger-ui.oauth2-redirect-url[quarkus.swagger-ui.oauth2-redirect-url]`

[.description]
--
OAuth redirect URL.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.request-interceptor]]`link:#quarkus-swaggerui_quarkus.swagger-ui.request-interceptor[quarkus.swagger-ui.request-interceptor]`

[.description]
--
MUST be a function. Function to intercept remote definition, "Try it out", and OAuth 2.0 requests. Accepts one argument requestInterceptor(request) and must return the modified request, or a Promise that resolves to the modified request.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.request-curl-options]]`link:#quarkus-swaggerui_quarkus.swagger-ui.request-curl-options[quarkus.swagger-ui.request-curl-options]`

[.description]
--
If set, MUST be an array of command line options available to the curl command. This can be set on the mutated request in the requestInterceptor function.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.response-interceptor]]`link:#quarkus-swaggerui_quarkus.swagger-ui.response-interceptor[quarkus.swagger-ui.response-interceptor]`

[.description]
--
MUST be a function. Function to intercept remote definition, "Try it out", and OAuth 2.0 responses. Accepts one argument responseInterceptor(response) and must return the modified response, or a Promise that resolves to the modified response.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.show-mutated-request]]`link:#quarkus-swaggerui_quarkus.swagger-ui.show-mutated-request[quarkus.swagger-ui.show-mutated-request]`

[.description]
--
If set to true, uses the mutated request returned from a requestInterceptor to produce the curl command in the UI, otherwise the request before the requestInterceptor was applied is used.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.supported-submit-methods]]`link:#quarkus-swaggerui_quarkus.swagger-ui.supported-submit-methods[quarkus.swagger-ui.supported-submit-methods]`

[.description]
--
List of HTTP methods that have the "Try it out" feature enabled. An empty array disables "Try it out" for all operations. This does not filter the operations from the display.
--|list of HttpMethod 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.validator-url]]`link:#quarkus-swaggerui_quarkus.swagger-ui.validator-url[quarkus.swagger-ui.validator-url]`

[.description]
--
By default, Swagger UI attempts to validate specs against swagger.io's online validator. You can use this parameter to set a different validator URL, for example for locally deployed validators (Validator Badge). Setting it to either none, 127.0.0.1 or localhost will disable validation.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.with-credentials]]`link:#quarkus-swaggerui_quarkus.swagger-ui.with-credentials[quarkus.swagger-ui.with-credentials]`

[.description]
--
If set to true, enables passing credentials, as defined in the Fetch standard, in CORS requests that are sent by the browser.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.model-property-macro]]`link:#quarkus-swaggerui_quarkus.swagger-ui.model-property-macro[quarkus.swagger-ui.model-property-macro]`

[.description]
--
Function to set default values to each property in model. Accepts one argument modelPropertyMacro(property), property is immutable
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.parameter-macro]]`link:#quarkus-swaggerui_quarkus.swagger-ui.parameter-macro[quarkus.swagger-ui.parameter-macro]`

[.description]
--
Function to set default value to parameters. Accepts two arguments parameterMacro(operation, parameter). Operation and parameter are objects passed for context, both remain immutable
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.persist-authorization]]`link:#quarkus-swaggerui_quarkus.swagger-ui.persist-authorization[quarkus.swagger-ui.persist-authorization]`

[.description]
--
If set to true, it persists authorization data and it would not be lost on browser close/refresh
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.layout]]`link:#quarkus-swaggerui_quarkus.swagger-ui.layout[quarkus.swagger-ui.layout]`

[.description]
--
The name of a component available via the plugin system to use as the top-level layout for Swagger UI.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.plugins]]`link:#quarkus-swaggerui_quarkus.swagger-ui.plugins[quarkus.swagger-ui.plugins]`

[.description]
--
A list of plugin functions to use in Swagger UI.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.presets]]`link:#quarkus-swaggerui_quarkus.swagger-ui.presets[quarkus.swagger-ui.presets]`

[.description]
--
A list of presets to use in Swagger UI.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.oauth-client-id]]`link:#quarkus-swaggerui_quarkus.swagger-ui.oauth-client-id[quarkus.swagger-ui.oauth-client-id]`

[.description]
--
OAuth default clientId - Used in the initOAuth method.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.oauth-client-secret]]`link:#quarkus-swaggerui_quarkus.swagger-ui.oauth-client-secret[quarkus.swagger-ui.oauth-client-secret]`

[.description]
--
OAuth default clientSecret - Used in the initOAuth method.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.oauth-realm]]`link:#quarkus-swaggerui_quarkus.swagger-ui.oauth-realm[quarkus.swagger-ui.oauth-realm]`

[.description]
--
OAuth1 Realm query parameter added to authorizationUrl and tokenUrl - Used in the initOAuth method.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.oauth-app-name]]`link:#quarkus-swaggerui_quarkus.swagger-ui.oauth-app-name[quarkus.swagger-ui.oauth-app-name]`

[.description]
--
OAuth application name, displayed in authorization popup - Used in the initOAuth method.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.oauth-scope-separator]]`link:#quarkus-swaggerui_quarkus.swagger-ui.oauth-scope-separator[quarkus.swagger-ui.oauth-scope-separator]`

[.description]
--
OAuth scope separator for passing scopes - Used in the initOAuth method.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.oauth-scopes]]`link:#quarkus-swaggerui_quarkus.swagger-ui.oauth-scopes[quarkus.swagger-ui.oauth-scopes]`

[.description]
--
OAuth Scopes, separated using the oauthScopeSeparator - Used in the initOAuth method.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.oauth-additional-query-string-params]]`link:#quarkus-swaggerui_quarkus.swagger-ui.oauth-additional-query-string-params[quarkus.swagger-ui.oauth-additional-query-string-params]`

[.description]
--
OAuth additional query parameters added to authorizationUrl and tokenUrl - Used in the initOAuth method.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.oauth-use-basic-authentication-with-access-code-grant]]`link:#quarkus-swaggerui_quarkus.swagger-ui.oauth-use-basic-authentication-with-access-code-grant[quarkus.swagger-ui.oauth-use-basic-authentication-with-access-code-grant]`

[.description]
--
OAuth only activated for the accessCode flow. During the authorization_code request to the tokenUrl, pass the Client Password using the HTTP Basic Authentication scheme - Used in the initOAuth method.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.oauth-use-pkce-with-authorization-code-grant]]`link:#quarkus-swaggerui_quarkus.swagger-ui.oauth-use-pkce-with-authorization-code-grant[quarkus.swagger-ui.oauth-use-pkce-with-authorization-code-grant]`

[.description]
--
OAuth only applies to authorizatonCode flows. Proof Key for Code Exchange brings enhanced security for OAuth public clients - Used in the initOAuth method.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.preauthorize-basic-auth-definition-key]]`link:#quarkus-swaggerui_quarkus.swagger-ui.preauthorize-basic-auth-definition-key[quarkus.swagger-ui.preauthorize-basic-auth-definition-key]`

[.description]
--
Pre-authorize Basic Auth, programmatically set DefinitionKey for a Basic authorization scheme - Used in the preauthorizeBasic method.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.preauthorize-basic-username]]`link:#quarkus-swaggerui_quarkus.swagger-ui.preauthorize-basic-username[quarkus.swagger-ui.preauthorize-basic-username]`

[.description]
--
Pre-authorize Basic Auth, programmatically set Username for a Basic authorization scheme - Used in the preauthorizeBasic method.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.preauthorize-basic-password]]`link:#quarkus-swaggerui_quarkus.swagger-ui.preauthorize-basic-password[quarkus.swagger-ui.preauthorize-basic-password]`

[.description]
--
Pre-authorize Basic Auth, programmatically set Password for a Basic authorization scheme - Used in the preauthorizeBasic method.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.preauthorize-api-key-auth-definition-key]]`link:#quarkus-swaggerui_quarkus.swagger-ui.preauthorize-api-key-auth-definition-key[quarkus.swagger-ui.preauthorize-api-key-auth-definition-key]`

[.description]
--
Pre-authorize ApiKey Auth, programmatically set DefinitionKey for an API key or Bearer authorization scheme - Used in the preauthorizeApiKey method.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.preauthorize-api-key-api-key-value]]`link:#quarkus-swaggerui_quarkus.swagger-ui.preauthorize-api-key-api-key-value[quarkus.swagger-ui.preauthorize-api-key-api-key-value]`

[.description]
--
Pre-authorize ApiKey Auth, programmatically set ApiKeyValue for an API key or Bearer authorization scheme - Used in the preauthorizeApiKey method.
--|string 
|


a| [[quarkus-swaggerui_quarkus.swagger-ui.enable]]`link:#quarkus-swaggerui_quarkus.swagger-ui.enable[quarkus.swagger-ui.enable]`

[.description]
--
If Swagger UI is included, it should be enabled/disabled. By default, Swagger UI is enabled if it is included (see `always-include`).
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-swaggerui_quarkus.swagger-ui.urls-urls]]`link:#quarkus-swaggerui_quarkus.swagger-ui.urls-urls[quarkus.swagger-ui.urls]`

[.description]
--
The urls that will be included as options. By default the OpenAPI path will be used. Here you can override that and supply multiple urls that will appear in the TopBar plugin.
--|`Map<String,String>` 
|

|===